Summary of changes to citeproc-js since version 1.0.0 release.

==========================
Changes in version 1.0.331
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Break parallel detection when title exists on
  either item, and title values do not match.


==========================
Changes in version 1.0.330
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Do not strip periods embedded in ordinary field strings
  if they don't appear to be part of an abbreviation.


==========================
Changes in version 1.0.329
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Reverse requirement of page variable for rendering
  of locator on statutory types, introduced at
  1.0.327.

- Fix bug in relatively new code in disambiguation machinery,
  triggered by an attempt to access a name form parameter
  that has not been set in that case.

- Allow personal name replacement only on interview and
  personal communication items.

==========================
Changes in version 1.0.328
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Apply leading embedded locator label to
  item label if section is not present.

- Remove redundant text escapes (bug unmasked
  by 1.0.324).


==========================
Changes in version 1.0.327
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Remove requirement of title variable for
  generation of internal legislation_id value
  on statutory items, and use either original-date
  or issued in the value, but not both.

- Allow locator on statutory types if page variable
  is non-nil.

